# FusionMediaProvider

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  settings.html  src-files.js
.github/: PUBLISHING.md  QUICKSTART.md
.github/workflows/: README.md  ci.yml  docs.yml  publish.yml  release.yml
fusion-media-provider/: Cargo.toml  PAGINATION.md  README.md
fusion-media-provider/examples/: download_example.rs
fusion-media-provider/src/: create_provider.rs  downloader.rs  error.rs  lib.rs  main.rs  media_provider.rs  models.rs  pexels_provider.rs  pixabay_provider.rs
fusion-media-provider/tests/: integration_test.rs
fusion_media_provider/: all.html  enum.DownloadState.html  enum.ImageQuality.html  enum.MediaError.html  enum.MediaType.html  enum.VideoQuality.html  index.html  sidebar-items.js  struct.AggregatedSearchResult.html  struct.BatchDownloadProgress.html  struct.DownloadConfig.html  struct.DownloadProgress.html  struct.MediaDownloader.html  struct.MediaItem.html  struct.MediaMetadata.html  struct.MediaUrls.html  struct.PexelsProvider.html  struct.PixabayProvider.html  struct.SearchParams.html  struct.SearchResult.html  struct.VideoFile.html  type.ProgressCallback.html  type.Result.html
fusion_media_provider/downloader/: struct.DownloadConfig.html  struct.MediaDownloader.html  struct.SearchParams.html
fusion_media_provider/error/: enum.MediaError.html  type.Result.html
fusion_media_provider/models/: enum.DownloadState.html  enum.ImageQuality.html  enum.MediaType.html  enum.VideoQuality.html  struct.AggregatedSearchResult.html  struct.BatchDownloadProgress.html  struct.DownloadProgress.html  struct.MediaItem.html  struct.MediaMetadata.html  struct.MediaUrls.html  struct.SearchResult.html  struct.VideoFile.html  type.ProgressCallback.html
fusion_media_provider/pexels_provider/: struct.PexelsProvider.html
fusion_media_provider/pixabay_provider/: struct.PixabayProvider.html
pexels-sdk/: Cargo.toml  README.md
pexels-sdk-cli/: Cargo.toml  README.md
pexels-sdk-cli/src/: api.rs  cli.rs  main.rs
pexels-sdk/src/: client.rs  download.rs  lib.rs  models.rs  search.rs
pexels-sdk/src/collections/: featured.rs  items.rs  media.rs  mod.rs
pexels-sdk/src/domain/: models.rs
pexels-sdk/src/photos/: curated.rs  mod.rs  photo.rs  search.rs
pexels-sdk/src/videos/: mod.rs  popular.rs  search.rs  video.rs
pexels-sdk/tests/: integration_test.rs
pexels_sdk/: all.html  enum.Color.html  enum.Locale.html  enum.MediaSort.html  enum.MediaType.html  enum.MediaTypeResponse.html  enum.Orientation.html  enum.PexelsError.html  enum.Size.html  index.html  sidebar-items.js  struct.Collection.html  struct.Collections.html  struct.CollectionsBuilder.html  struct.CollectionsResponse.html  struct.Curated.html  struct.CuratedBuilder.html  struct.DownloadManager.html  struct.Featured.html  struct.FeaturedBuilder.html  struct.FetchPhoto.html  struct.FetchPhotoBuilder.html  struct.FetchVideo.html  struct.FetchVideoBuilder.html  struct.Hex.html  struct.Media.html  struct.MediaBuilder.html  struct.MediaPhoto.html  struct.MediaResponse.html  struct.MediaVideo.html  struct.Pexels.html  struct.PexelsClient.html  struct.Photo.html  struct.PhotoSrc.html  struct.PhotosResponse.html  struct.Popular.html  struct.PopularBuilder.html  struct.Search.html  struct.SearchBuilder.html  struct.SearchParams.html  (+8 more)
pexels_sdk/client/: struct.PexelsClient.html
pexels_sdk/download/: struct.DownloadManager.html  type.ProgressCallback.html
pexels_sdk/search/: struct.SearchParams.html
pexels_sdk_cli/: all.html  fn.main.html  index.html  sidebar-items.js
pixabay-sdk/: Cargo.toml  README.md
pixabay-sdk-cli/: Cargo.toml
pixabay-sdk-cli/src/: main.rs
pixabay-sdk/examples/: base.rs
pixabay-sdk/src/: client.rs  error.rs  lib.rs  models.rs
pixabay-sdk/tests/: integration_test.rs
pixabay_sdk/: all.html  enum.Category.html  enum.ImageType.html  enum.Language.html  enum.Order.html  enum.Orientation.html  enum.PixabayError.html  enum.VideoType.html  index.html  sidebar-items.js  struct.Image.html  struct.ImageResponse.html  struct.Pixabay.html  struct.SearchImageParams.html  struct.SearchVideoParams.html  struct.Video.html  struct.VideoFile.html  struct.VideoFiles.html  struct.VideoResponse.html  type.Result.html
pixabay_sdk_cli/: all.html  enum.Commands.html  fn.main.html  fn.parse_category.html  index.html  sidebar-items.js  struct.Cli.html
scripts/: release.ps1  release.sh
search.index/: 00414c32392e.js  00a0f0ddb4af.js  00b1d571df86.js  00d3f8be110f.js  01dfcae8e257.js  025c0c9d1d12.js  032da4a15341.js  0343d8ca7fc2.js  044eaceb5994.js  0451659b558a.js  052e3f4f2303.js  055a6aebefea.js  05b7789b1531.js  06b1314e452b.js  077ae45f29f0.js  07c12affce78.js  07cf5690e2bc.js  087006e68b7a.js  09812ecfbf9c.js  0995ed563815.js  099c4e45c46b.js  099d2ec523d9.js  0bc9e49a37ca.js  0c7fc9fda4b6.js  0ccd0a57213b.js  0ce35fcec513.js  0db964bf4ccd.js  0df30eea458a.js  0eb31ae44a67.js  0ed1ff192d13.js  0f70d1d9849e.js  105b43120d59.js  112e5fc84d2e.js  12ed87b8bc2a.js  13fc0ce47191.js  142dbb49fcaf.js  14ab940de661.js  1518312ebdea.js  166fb461f5a4.js  17d98e317af4.js  (+168 more)
(+160 files in other folders)
