[workspace]
members = [
    "pexels-sdk",
    "pexels-sdk-cli",
    "pixabay-sdk",
    "pixabay-sdk-cli",
    "fusion-media-provider",
]

resolver = "2"

[profile.release]
opt-level = 3

[workspace.package]
version = "1.0.1"
authors = ["https://github.com/tornado-product"]
edition = "2021"
rust-version = "1.80.0"
license = "MIT OR Apache-2.0"
description = "Rust client with multiple media APIs. Pexels API Address: https://www.pexels.com/api/documentation/, Pixabay API Address: https://pixabay.com/api/docs/."
homepage = "https://github.com/tornado-product"
repository = "https://github.com/tornado-product/FusionMediaProvider.git"
documentation = "https://docs.rs/fusion-media-provider"
readme = "./README.md"
keywords = ["pexels", "api", "client", "cli", "pexels-sdk"]
categories = ["web-programming", "development-tools", "asynchronous", "network-programming"]

[workspace.dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
pexels-sdk = { path = "pexels-sdk" }
pixabay-sdk = { path = "pixabay-sdk" }

reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "system-proxy", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
