[package]
name = "fusion-media-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/fusion-media-provider"
description = "Unified media provider supporting multiple sources (Pixabay, Pexels)"
keywords = ["media", "provider", "pixabay", "pexels", "images"]
categories = ["multimedia", "api-bindings"]

[dependencies]
pixabay-sdk = { path = "../pixabay-sdk" }
pexels-sdk = { path = "../pexels-sdk", optional = true}
tokio = { workspace = true }
thiserror.workspace = true
async-trait = "0.1"
futures = "0.3"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy = "0.15.7"
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4.28"

[features]
default = ["pixabay", "pexels"]
pixabay = []
pexels = ["pexels-sdk"]

[lib]
name = "fusion_media_provider"
path = "src/lib.rs"