[package]
name = "pixabay-sdk-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for Pixabay API"
keywords = ["pixabay", "cli", "image", "video", "search"]

[[bin]]
name = "pixabay-sdk-cli"
path = "src/main.rs"

[dependencies]
pixabay-sdk = { path = "../pixabay-sdk" }
tokio = { workspace = true }
dotenvy = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde_json = { workspace = true }